@startuml

title __VIEW's Class Diagram__\n

  namespace View {
    class View.LayoutChats {
        {static} + userItemMsgList : List<UserItemMsg>
        - context : Context
        - recyclerView : RecyclerView
        - rootView : View
        + onCreateView()
        - initViews()
        - loadData()
    }
  }
  

  namespace View {
    class View.LayoutContacts {
        {static} - TAG : String
        - contactItemMsgList : List<UserItemMsg>
        - context : Context
        - groupItemMsgList : List<UserItemMsg>
        - gson : Gson
        - rootView : View
        - rvContact : RecyclerView
        - rvGroup : RecyclerView
        - userItemMsgList : List<UserItemMsg>
        + initView()
        + loadUserMsgList()
        + onCreateView()
        - initContactViews()
        - initGroupViews()
    }
  }
  

  namespace View {
    class View.LayoutMoments {
        - btnSend : Button
        - gson : Gson
        - momentMsgList : List<MomentMsg>
        - momentRecyclerView : RecyclerView
        - rootView : View
        - tvNewMoment : TextView
        + onCreateView()
        - initViews()
        - loadData()
    }
  }
  

  namespace View {
    class View.PicAndTextBtn {
        - context : Context
        - image : Drawable
        - imageBackground : Drawable
        - imageView : ImageView
        - text : String
        - textBackground : Drawable
        - textColor : int
        - textSize : float
        - textView : TextView
        + PicAndTextBtn()
        + setImageView()
        + setOnClickListener()
        - findAttrs()
        - initViews()
        - setClickListener()
        - setPicAndTextBtnLayoutParams()
    }
  }
  

  namespace View {
    interface View.PicAndTextBtn.picAndTextBtnClickListener {
        {abstract} + onClick()
    }
  }
  

  namespace View {
    class View.TitleBar {
        - btnLeft : Button
        - btnRight : Button
        - context : Context
        - leftBackground : Drawable
        - leftText : String
        - leftTextColor : int
        - leftTextSize : float
        - rightBackground : Drawable
        - rightText : String
        - rightTextColor : int
        - rightTextSize : float
        - titleBackground : Drawable
        - titleText : String
        - titleTextColor : int
        - titleTextSize : float
        - tvTitle : TextView
        + TitleBar()
        + setTitleBarClickListetner()
        + setTitleText()
        - findAttrs()
        - initViews()
        - setButtonClickListener()
        - setTitleBarLayoutParams()
    }
  }
  

  namespace View {
    interface View.TitleBar.titleBarClickListener {
        {abstract} + leftButtonClick()
        {abstract} + rightButtonClick()
    }
  }
  

  View.LayoutChats -up-|> androidx.fragment.app.Fragment
  View.LayoutChats o-- Adapter.AdapterUserItem : adapterUserItem
  View.LayoutContacts -up-|> androidx.fragment.app.Fragment
  View.LayoutContacts o-- View.PicAndTextBtn : patbBarContact
  View.LayoutContacts o-- View.PicAndTextBtn : patbBarGroup
  View.LayoutMoments -up-|> androidx.fragment.app.Fragment
  View.LayoutMoments o-- Adapter.AdapterMomentItem : adapterMomentItem
  View.PicAndTextBtn -up-|> android.widget.LinearLayout
  View.PicAndTextBtn o-- View.PicAndTextBtn.picAndTextBtnClickListener : listener
  View.PicAndTextBtn +-down- View.PicAndTextBtn.picAndTextBtnClickListener
  View.TitleBar -up-|> android.widget.RelativeLayout
  View.TitleBar o-- View.TitleBar.titleBarClickListener : listener
  View.TitleBar +-down- View.TitleBar.titleBarClickListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
